# Tsuzuku

./: .gitignore  Cargo.toml  README.md  index.html  mobile.toml  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  Home.tsx  Touch.tsx  lib.rs  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
